CE-71 pnio: virtual threads